# advent-of-code

./: .gitignore  README.md  day1.py  day5.py  day7.py  shared.py
.github/workflows/: ci.yml
explanation/: scala.md
explanation/y2020/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md
explanation/y2022/: day16.md  day18.md
haskell/: Day1.hs  Day2.hs  Shared.hs  advent.cabal
haskell/src/: Day1.hs  Day2.hs  Main.hs  Shared.hs
haskell/src/Data/: Advent.hs
haskell/src/Y2019/: Day1.hs  Day2.hs
jvm/: .gitignore  README.md  build.sbt
jvm/src/main/scala/advent/shared/: Algorithm.scala  Coord.scala  Day.scala  DayInput.scala  DayRunner.scala  IO.scala  IOHelper.scala  InputTransformer.scala  SafeDayRunner.scala  UnsafeDayRunner.scala
jvm/src/main/scala/advent/y2018/: CircularList.scala  day10.scala  day11.scala  day8.scala  day9.scala
jvm/src/main/scala/advent/y2020/: Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day2.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala  package.scala
jvm/src/main/scala/advent/y2021/: Day1.scala  Day2.scala  Day3.scala
jvm/src/main/scala/advent2018/: day10.scala  day8.scala  day9-util.scala  day9.scala  io.scala
python/: .pylintrc  README.md  day1.py  day2.py  day3.py  day4.py  day6.py  requirements.txt  shared.py
python/y2018/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
python/y2019/: day1.py  day2.py  day3.py
python/y2022/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
