name:                advent
version:             0.1.0.0
synopsis:            Advent of Code solutions in Haskell
description:         Advent of Code
homepage:            https://github.com/michaelmdeng/advent-of-code
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Michael Deng
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
